# EEG

./: .breakpoints  datosyt.csv  main.py  pyproject.toml
